# probbable-waddle

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_svm_lin.ipynb  01_modalities_fusion.py
settings/: settings.json
src/features/: features_step.py
src/ingest/: ingest_step.py  make_duckdb.py
src/models/: svm_step.py
src/pipeline/: pipeline_step.py  run_experiment.py
src/steps/: features_step.py  ingest_step.py  slice_step.py  train_step.py
src/utils/: 01_modalities_fusion.py  timer.py  utils.py
src/windows/: slice_step.py
