[project]
name = "tcc"
version = "0.1.0"
description = "Pipelines para parte pratica do meu TCC"
authors = [
    {name = "Itallo Pacheco itallopacheco.profissional@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "duckdb (>=1.3.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pyarrow (>=4.0.0,<20.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "pandera (>=0.24.0,<0.25.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

